--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
-  "name": "preflight_transformer",
+  "name": "Preflight",
   "version": "1.0.0",
-  "description": "preflight_transformer",
+  "description": "Source  script for a Enfocus Switch script tool, intended to combine XML and image preflight components in a single PDF file",
+  "keywords": [
+    "enfocus",
+    "switch",
+    "sscript"
+  ],
+  "author": "CMI - Dirty Coding Team : the Unicorns lovers",
+  "contributors": [
+    {
+      "name": "Konogan Cossec",
+      "email": "kcossec@cmimedia.fr"
+    },
+    {
+      "name": "Tristan Juhé",
+      "email": "tjuhe@cmimedia.fr"
+    }
+  ],
+  "repository": "github:konogan/preflight_transformer",
+  "license": "ISC",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "transpile": "SwitchScriptTool --transpile ."
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "fs-extra": "^9.0.1",
     "get-stream": "^6.0.0",
     "pdfkit": "^0.11.0",
     "tmp": "^0.2.1",
     "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "@types/node": "12.12.70",
+    "@types/switch-scripting": "https://github.com/enfocus-switch/types-switch-scripting/archive/1.0.1.tar.gz",
+    "@types/fs-extra": "^9.0.5"
   }
 }
